# hft-orderbook-kalman

./: .gitignore  CONTEXT.md  README.md
cpp/: CMakeLists.txt
cpp/include/: EventGenerator.h  OrderBook.h  PriceLevel.h  order.h
cpp/src/: EventGenerator.cpp  OrderBook.cpp  benchmark.cpp  main.cpp
cpp/tests/: test_orderbook.cpp
python/: analysis.ipynb  kalman.py  requirements.txt  test_kalman.py
python/.virtual_documents/: Untitled.ipynb
